Updates from Overleaf

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -74,7 +74,7 @@
 %\subtitleB{Second part of Subtitle} % (if any)
 
 % Author
-\author{Octávio Maia}
+\author{Octávio José Azevedo Maia}
 
 % Supervisor(s)
 \supervisor{Professor José Carlos Ramalho}
@@ -107,14 +107,20 @@
 	\umfrontcover	
 	\umtitlepage
 	
-	% Add acknowledgements ----------------------------
+	% Anexo 3 ------------------------------------------
+    %\input{0_anexo3.tex}
+	
+	% Add acknowledgements -----------------------------
     %\input{0_acknowledgements.tex}
+
+    % Anexo 4 ------------------------------------------
+    %\input{0_anexo4.tex}
 
 	% Resumo ------------------------
 	\cleardoublepage
 	\input{sections/0_resumo.tex}
 
-	% Add abstracts (en,pt) ---------------------------
+	% Add abstracts (en,pt) ----------------------------
 	\input{sections/0_abstract.tex}
 	
 	% Summary Lists ------------------------------------
