--- a/sections/1_introducao.tex
+++ b/sections/1_introducao.tex
@@ -24,27 +24,33 @@ Este trabalho enquadra-se no Projeto \gls{clav}, nas suas terceiras e quarta fas
 %\section{Motivação}
 %escrever aqui cenas da autenticacao e seguranca
 
-\cleardoublepage
+%\cleardoublepage
 \section{Objetivos}
 
 A realização desta dissertação tem como objetivo os seguintes pontos:
 
 \begin{itemize}
-    \item Estudo e interpretação dos serviços da plataforma Autenticação.Gov e respectivos requisitos.
+    \item Estudo e interpretação dos serviços da plataforma Autenticação.Gov e respetivos requisitos.
     \item Integração e desenvolvimento de métodos apropriados de registo e login de utilizadores, bem como a gestão dos mesmos, utilizando a ferramenta Autenticação.Gov.
     \item Criação de métodos apropriados para autenticação de pedidos via a API pública disponibilizada.
     \item Avaliação dos métodos gerados, garantindo assim uma correta implementação dos mesmos na plataforma \gls{clav}.
 \end{itemize}
 
-%\cleardoublepage
+\cleardoublepage
 \section{Metodologia}
 
 A metodologia para a realização desta dissertação segue os seguintes passos:
 
 \begin{itemize}
-    \item Leitura e análise inicial do projecto.
+    \item Leitura e análise inicial do projeto.
     \item Estudo das ferramentas já implementadas.
     \item Estudo da ferramenta Autenticação.Gov e requisitos por ela impostos.
     \item Desenvolvimento de um protótipo com funcionalidades semelhantes ou idênticas à esperada.
     \item Implementação na plataforma \gls{clav}.
 \end{itemize}
+
+\section{Síntese}
+
+Neste capítulo foi realizada uma breve introdução e enquadramento desta dissertação no projeto \gls{clav}, listando os objetivos propostos durante o desenvolvimento da mesma, bem como a metodologia adoptada.
+
+No capítulo seguinte irá ser documentado o estado da arte atual, sendo focado em especial atenção o Autenticação.Gov, sendo descrito o seu workflow, funcionamento e especificação técnica. Além deste, será também mencionada a especificação do Cartão de Cidadão e da proteção da API de dados disponibilizada ao público.
