--- a/sections/5_conclusao.tex
+++ b/sections/5_conclusao.tex
@@ -1,13 +1,21 @@
 \chapter{Conclusões e Trabalho futuro}
 
-Hoje em dia, com o contínuo crescimento de ataques informáticos, bem como fugas de informação sensível, é necessário cada vez mais reforçar os meios de protecção existentes, de modo a não só prevenir, mas evitar ao máximo que os mesmos se repitam.
+Hoje em dia, com o contínuo crescimento de ataques informáticos, bem como fugas de informação sensível, é necessário cada vez mais reforçar os meios de proteção existentes, de modo a não só prevenir, mas evitar ao máximo que os mesmos se repitam.
 
-Para tal, a escrita desta pré-dissertação baseou-se na documentação dos diversos métodos de segurança e autenticação impostos no desenvolvimento do projecto \gls{clav}.
+Para tal, a escrita desta dissertação baseou-se na documentação dos diversos métodos de segurança e autenticação impostos no desenvolvimento do projeto \gls{clav}.
 
 Foram exploradas diversas noções de encriptação, bem como vulnerabilidades existentes e possíveis soluções às mesmas. Após explorada esta vertente foi realizada uma breve introdução ao \emph{bcrypt} e ao seu funcionamento, bem como uma introdução a possíveis vulnerabilidades utilizando hardware especializado.
 
-Após concluída esta etapa, foi realizada uma leitura sobre a ferramenta \emph{Autenticação.Gov}, desenvolvida pela \gls{ama}. Esta ferramenta permite a autenticação em diversos serviços utilizando o Cartão de Cidadão, entre outras alternativas. Foi feita uma breve introdução ao standard \gls{saml}, sendo este necessário para a correta implementação dos serviços previamente mencionados.
+Após concluída esta etapa, foi realizada uma leitura sobre a ferramenta \emph{Autenticação.Gov}, desenvolvida pela \gls{ama}. Esta ferramenta permite a autenticação em diversos serviços utilizando o Cartão de Cidadão, entre outras alternativas. Foi feita uma introdução ao standard \gls{saml}, sendo este necessário para a correta implementação dos serviços previamente mencionados, bem como a especificação de outros mecanismos necessários, como a utilização de \emph{HTTPS} e \emph{SSL}, a criação de chaves \emph{RSA} e a geração de um certificado \emph{X509} com as respetivas cadeias de autenticação.
 
-Por fim foi introduzida a noção de \emph{JSON Web Token} e o papel crucial que desempenham para o âmbito do projecto, a autenticação de chamadas à \gls{api} de dados.
+Posteriormente foi introduzida a noção de \emph{JSON Web Token} e o papel crucial que desempenham para o âmbito do projeto, sendo este a autenticação de chamadas à \gls{api} de dados. Foram também desenvolvidos diversos métodos de proteção da mesma, sendo estes todos baseados no \emph{JSON Web Token} previamente descrito.
 
-Como trabalho futuro, irá ser aprofundado o estudo realizado sobre o standard \gls{saml}, após o qual irão ser implementados mecanismos de autenticação baseados no \emph{Autenticação.Gov} (sendo estes realizados por Cartão de Cidadão e Chave Móvel Digital), bem como a implementação de autenticação via \gls{jwt} aos pedidos referentes à \gls{api}. Por fim, irá ser feito um novo estudo sobre os métodos de autenticação e segurança já implementados, podendo ser realizada uma melhoria dos mesmos
+Foram também desenvolvidas diversos mecanismos capazes de realizar a gestão de utilizadores, bem como a sua edição e desativação caso necessário. Este conceito foi expandido para as chaves API emitidas pela plataforma CLAV, sendo possível obter uma listagem das mesmas, bem como a sua edição e remoção da plataforma.
+
+Após esta etapa foi desenvolvido um mecanismo capaz de relatar a métrica da plataforma CLAV, ou seja, o número de utilizadores, chaves API emitidas, quantidade de acessos a cada rota da plataforma, bem como o número de \emph{GET}, \emph{POST}, etc., que cada rota da API disponibilizada é sujeita.
+
+Por fim foi concluída a integração do \emph{Autenticação.Gov}, ou seja, o registo e autenticação através de Cartão de Cidadão na plataforma CLAV, sendo todo este processo descrito nesta dissertação de forma extensa, de modo a servir de base para qualquer futura implementação desta mesma vertente de autenticação.
+
+Todo este processo previamente descrito foi documentado através de diagramas de fluxo e de sequência, estando estes presentes nos capítulos \ref{capituloSolucoes} e \ref{implementacao}, respetivamente.
+
+Por conseguinte, considera-se que todos os objetivos propostos para esta dissertação foram cumpridos, sendo a implementação de autenticação através de Chave Móvel Digital um desafio interessante para uma futura implementação.
